# sample-rag

./: Dockerfile  README.md  docker-compose.yml  env.example  main.py  pyproject.toml
scripts/: start.sh  test_api.sh
src/: __init__.py  main.py
src/application/: __init__.py  use_cases.py
src/domain/: __init__.py  entities.py  services.py  value_objects.py
src/infrastructure/: __init__.py  document_source_adapter.py  embedding_service.py  ollama_service.py  qdrant_client.py  rag_service.py  simple_rag_service.py  web_scraping_service.py
src/presentation/: __init__.py  api.py
src/shared/: __init__.py  result.py
