[project]
name = "sample-rag"
version = "0.1.0"
description = "Hybrid RAG system with web scraping and Qdrant"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ruff>=0.12.2",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.10.0",
    "qdrant-client>=1.12.0",
    "sentence-transformers>=3.3.0",
    "beautifulsoup4>=4.12.3",
    "requests>=2.32.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.12",
    "ollama>=0.4.0",
    "aiofiles>=24.1.0",
    "loguru>=0.7.2",
    "python-dotenv>=1.0.1",
    "tenacity>=9.0.0",
    "asyncio-mqtt>=0.16.2",
    "pydantic-settings>=2.6.0",
    "lxml>=5.0.0",
    "aiohttp>=3.10.0",
    "urllib3>=2.0.0",
    "fake-useragent>=1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py313"
